<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="android.charilog.MainActivity">

    <item
        android:id="@+id/action_record_list"
        android:orderInCategory="100"
        android:title="@string/action_record_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_download_record"
        android:orderInCategory="100"
        android:title="@string/action_download_record"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_monitor_map"
        android:orderInCategory="100"
        android:title="@string/action_monitor_map"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
