<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_server_url"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/hint_input_url"/>

        <Button
            android:id="@+id/button_user_create"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/button_user_create"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_user_id"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_user_id"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

        <Button
            android:id="@+id/button_sync"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/button_sync"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_device_id"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_et_device_id"/>

        <Button
            android:id="@+id/button_model_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/button_model_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_del_id"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:hint="@string/hint_del_id"/>

        <Button
            android:id="@+id/button_del"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/button_del"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TableLayout
            android:id="@+id/tbl_list_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>

    </ScrollView>

</LinearLayout>
