<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <!--ボタン-->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <Button
                    android:id="@+id/buttonStart"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/buttonStart"/>

                <Button
                    android:id="@+id/buttonStop"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/buttonStop"/>

            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/tv_menu"/>

        <!--動作状態表示-->
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorStatus"
            android:textSize="24dp"/>

        <!--位置精度設定-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_accuracy_range"/>

            <EditText
                android:id="@+id/et_accuracy"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:text="@string/et_accuracy_default"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_unit"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!--位置情報-->
            <TableRow>
                <TextView
                    android:layout_span="2"
                    android:text="@string/tv_location_info"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_time"/>

                <TextView
                    android:id="@+id/tv_time_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_default_val"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_latitude"/>

                <TextView
                    android:id="@+id/tv_latitude_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_default_val"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_longitude"/>

                <TextView
                    android:id="@+id/tv_longitude_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_default_val"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_altitude"/>

                <TextView
                    android:id="@+id/tv_altitude_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_default_val"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_accuracy"/>

                <TextView
                    android:id="@+id/tv_accuracy_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_default_val"/>
            </TableRow>

            <!--走行状況-->
            <TableRow
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_span="2"
                    android:text="@string/tv_cycling_info"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:text="@string/tv_total_time"/>

                <TextView
                    android:id="@+id/tv_total_time_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:text="@string/tv_default_val"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:text="@string/tv_total_distance"/>

                <TextView
                    android:id="@+id/tv_total_distance_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:text="@string/tv_default_val"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:text="@string/tv_current_speed"/>

                <TextView
                    android:id="@+id/tv_current_speed_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:text="@string/tv_default_val"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_max_speed"/>

                <TextView
                    android:id="@+id/tv_max_speed_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_default_val"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ave_speed"/>

                <TextView
                    android:id="@+id/tv_ave_speed_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_default_val"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>