<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/et_server_url"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:hint="@string/hint_input_url"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/et_user_id"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_user_id"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"/>

    <Button
        android:id="@+id/button_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_download"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TableLayout
            android:id="@+id/tbl_list_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>

    </ScrollView>
</LinearLayout>
