<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_time"/>

            <TextView
                android:id="@+id/tv_time_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_default_val"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_latitude"/>

            <TextView
                android:id="@+id/tv_latitude_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_default_val"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_longitude"/>

            <TextView
                android:id="@+id/tv_longitude_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_default_val"/>
        </TableRow>

    </TableLayout>

</LinearLayout>